<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Maintenance Log</string>
    <string name="title_maintenance_detail">Maintenance Detail</string>
    <string name="title_maintenance_list">My Maintenances</string>
    <string name="sync_button">Synchronize</string>
    <string name="readCode_button">Read QrCode</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_audit_main">Audit</string>
    <string name="empty_list">Maintenance Activities not found. Please Reload</string>
    <string name="audit_mode">Audit Mode</string>
    <string name="load_data_success">Data Loaded</string>
    <string name="num_ordem">Ordem</string>
    <string name="enum_equipamento">Equip.</string>
    <string name="designacao_equipamento">Designaçao</string>
    <string name="localizacao_equipamento">Localizaçao</string>
    <string name="prioridade_ordem">P</string>
    <string name="lista_material">Lista de Material</string>
    <string name="historico">Historico de Manutençoes</string>
    <string name="standby">StandBy</string>
    <string name="finalizar">Finalizar</string>
    <string name="observacoes">Observações</string>
    <string name="title_activity_maintenance_history">MaintenanceHistory</string>
    <string name="next_maintenance">Sem Informação</string>
    <string name="next_maintenance_label">Proxima Manutenção</string>
    <string name="title_activity_maintenance_hist">Histórico de Manutenções</string>
    <string name="title_activity_maintenance_parts">MaintenanceParts</string>
    <string name="finalize">Finalizar</string>
    <string name="tipo_ordem">Tipo</string>

</resources>
