<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MaintenanceDetailFragment" >
    <ListView
        android:layout_width="fill_parent"
        android:id="@+id/list_procedimentos"
        android:layout_height="0dip"
        android:layout_weight="1"/>

    <EditText
        android:inputType="textMultiLine"
        android:lines="8"
        android:minLines="3"
        android:gravity="top|left"
        android:maxLines="10"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:scrollbars="vertical"
        android:hint="@string/observacoes"
        android:id="@+id/observacoes"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0">
        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/lista_material"
            android:id="@+id/lista_material"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/historico"
            android:id="@+id/historico"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/standby"
            android:id="@+id/standby"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/finalizar"
            android:id="@+id/finalizar"/>
    </LinearLayout>
</LinearLayout>

