<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@android:id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_list"
        android:layout_gravity="top|center_horizontal" />

    <fragment
        android:id="@+id/maintenance_list"
        android:name="com.smartech.maintenancelog.MaintenanceListFragment"
        tools:layout="@android:layout/list_content"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"/>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sync_button"
            android:id="@+id/sync"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/readCode_button"
            android:id="@+id/readCode"/>
    </LinearLayout>
</LinearLayout>

