<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:baselineAligned="false"
    android:divider="?android:attr/dividerHorizontal"
    android:orientation="horizontal"
    android:showDividers="middle"
    tools:context=".MaintenanceListActivity">

    <!--
    This layout is a two-pane layout for the Maintenances
    master/detail flow. See res/values-large/refs.xml and
    res/values-sw600dp/refs.xml for an example of layout aliases
    that replace the single-pane version of the layout with
    this two-pane version.

    For more on layout aliases, see:
    http://developer.android.com/training/multiscreen/screensizes.html#TaskUseAliasFilters
    -->
    <LinearLayout         android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">




        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1">
            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:gravity="center_horizontal"
                android:layout_gravity="top"
                android:layout_margin="0dp">
                <TextView android:text="@string/num_ordem"
                    android:background="@drawable/cell_shape_head"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.6"
                    android:textColor="@android:color/background_light"
                    android:textStyle="bold"/>
                <TextView android:text="@string/enum_equipamento"
                    android:background="@drawable/cell_shape_head"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.6"
                    android:textColor="@android:color/background_light"
                    android:textStyle="bold"/>
                <TextView android:text="@string/designacao_equipamento"
                    android:background="@drawable/cell_shape_head"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:textColor="@android:color/background_light"
                    android:textStyle="bold"/>
                <TextView android:text="@string/localizacao_equipamento"
                    android:background="@drawable/cell_shape_head"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"/>
                <TextView android:text="@string/prioridade_ordem"
                    android:background="@drawable/cell_shape_head"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.2"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"/>
            </TableRow>
            <TableRow android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:gravity="center_horizontal"
                android:background="@drawable/cell_shape"
                android:layout_margin="0dp">
                <TextView
                    android:id="@android:id/empty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty_list"
                    android:layout_gravity="top|center_horizontal" />
            </TableRow>
            <fragment
                android:id="@+id/maintenance_list"
                android:name="com.smartech.maintenancelog.MaintenanceListFragment"
                tools:layout="@android:layout/list_content"
                android:layout_width="342dp"
                android:layout_height="0dip"
                android:layout_weight="1"/>

        </TableLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sync_button"
                android:id="@+id/sync"
                />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/readCode_button"
                android:id="@+id/readCode"/>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/maintenance_detail_container"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.8" />

</LinearLayout>
